# aureon

./: .dockerignore  API_QUICK_REFERENCE.md  CI_CD_SETUP.md  COMPLETE_REQUIREMENTS_ANALYSIS.md  COMPLETE_REQUIREMENTS_STATUS.md  Cargo.toml  DEVOPS.md  DOCUMENTATION_INDEX.md  Dockerfile  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  Makefile  PHASE_10_SUMMARY.md  PHASE_11_SUMMARY.md  PHASE_12_SUMMARY.md  PHASE_13_SUMMARY.md  PHASE_4_2_COMPLETION.md  PHASE_4_3_BEFORE_AFTER.md  PHASE_4_3_COMPLETION_REPORT.md  PHASE_4_3_SUMMARY.md  PHASE_5_1_COMPLETION.md  PHASE_5_2_COMPLETION.md  PHASE_5_3_COMPLETION.md  PHASE_6_1_COMPLETION.md  PHASE_6_1_IMPLEMENTATION_REPORT.md  PHASE_7_2_COMPLETION.md  PHASE_7_SUMMARY.md  PHASE_8_PLAN.md  PHASE_8_SUMMARY.md  PHASE_9_SUMMARY.md  PIPELINE_QUICK_REFERENCE.md  PRIORITIZED_ROADMAP.md  PROGRESS_SUMMARY.txt  PROJECT_STATUS.md  README.md  ROADMAP_NEXT_STEPS.md  SESSION_SUMMARY.md  SIGNATURE_VERIFICATION_QUICK_START.md  STATUS_PHASE_4_3.md  TESTED_CURL_COMMANDS.md  (+11 more)
aureon-cli/: Cargo.toml
aureon-core/: Cargo.toml
aureon-node/: Cargo.toml  build.rs
aureon-node/aureon_db/: 000013.sst  000016.sst  IDENTITY  LOG  LOG.old.1750272949599987  LOG.old.1750356658033373  MANIFEST-000018
aureon-node/src/: access_control.rs  api.rs  block.rs  block_producer.rs  community_governance.rs  config.rs  contract_registry.rs  cross_shard_protocol.rs  crypto.rs  cryptographic_review.rs  db.rs  error_recovery.rs  incentive_programs.rs  indexer.rs  key_utils.rs  lib.rs  light_block_header.rs  logging.rs  main.rs  mainnet_deployment.rs  mempool.rs  merkle_tree.rs  metrics.rs  metrics_tracker.rs  monitoring.rs  multinode_test.rs  network_security.rs  performance.rs  production_monitoring.rs  security_assessment.rs  shard_coordinator.rs  shard_manager.rs  shard_sync.rs  simulated_processor.rs  spv_api.rs  spv_client.rs  state.rs  state_compression.rs  state_processor.rs  stress_testing.rs  (+4 more)
aureon-node/src/consensus/: mod.rs  pos.rs  pow.rs
aureon-node/src/contracts/: counter.wasm  counter.wat  hello.wat  mint_tokens.wasm  mint_tokens.wat  sum_amounts.wasm  sum_amounts.wat  transfer_success.wasm  transfer_success.wat
aureon-node/src/mpt/: mod.rs  node.rs  trie.rs  util.rs
aureon-node/src/network/: message.rs  mod.rs
aureon-node/src/wasm/: engine.rs  gas_meter.rs  host_functions.rs  mod.rs
aureon_db/: 000008.sst  000013.sst  000018.sst  000023.sst  000031.sst  000034.sst  000039.sst  000044.sst  000065.sst  000068.sst  000111.sst  LOG  (+56 more)
(+23 files in other folders)
