[package]
name = "aureon-chain"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
hex = "0.4"
sha2 = "0.10"
ark-std = "0.4"
ark-relations = "0.4"
ark-r1cs-std = "0.4"
ark-groth16 = "0.4"
ark-snark = "0.4"
ark-bls12-381 = "0.4"
rand = "0.8"

[workspace]
members = [
    "aureon-cli",
    "aureon-core",
    "aureon-node"
]