[package]
name = "aureon-node"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
aureon-core = { path = "../aureon-core" }
sha2 = "0.10"
wasmtime = "13.0"
anyhow = "1.0"
ark-std = "0.4"
ark-relations = "0.4"
ark-r1cs-std = "0.4"
ark-groth16 = "0.4"
ark-snark = "0.4"
ark-bls12-381 = "0.4"
rand = "0.8"

[[bin]]
name = "aureon-node"
path = "src/main.rs"