[package]
name = "aureon-node"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
aureon-core = { path = "../aureon-core" }
sha2 = "0.10"
sha3 = "0.10.8"
wasmtime = "13.0"
anyhow = "1.0"
ark-std = "0.4"
ark-relations = "0.4"
ark-r1cs-std = "0.4"
ark-groth16 = "0.4"
ark-snark = "0.4"
ark-bls12-381 = "0.4"
rand = "0.8"
serde = { version = "1.0.219", features = ["derive"] }
bincode = { version = "2.0.0-rc.3", features = ["derive"] }
hex = "0.4.3"
ed25519-dalek = "2.0"
rocksdb = "0.21.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
toml = "0.8"
tokio-tungstenite = "0.20"
uuid = { version = "1.0", features = ["v4", "serde"] }
futures = "0.3"
prometheus = "0.13"
tracing-appender = "0.2"

[[bin]]
name = "aureon-node"
path = "src/main.rs"